objects/IND_Opp_Default_Team__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>role of opp team member</description>
        <label>Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>ID of opp team member</description>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>name of opp team member</description>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IND Opp Default Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>User_ID__c</columns>
        <columns>User_Name__c</columns>
        <columns>Team_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>